dom0/iptables.conf
# Generated by iptables-save v1.6.0 on Tue Jun  5 13:45:34 2018
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:tcfor - [0:0]
:tcin - [0:0]
:tcout - [0:0]
:tcpost - [0:0]
:tcpre - [0:0]
-A PREROUTING -j tcpre
-A INPUT -j tcin
-A FORWARD -j MARK --set-xmark 0x0/0xff
-A FORWARD -j tcfor
-A OUTPUT -j tcout
-A POSTROUTING -j tcpost
COMMIT
# Completed on Tue Jun  5 13:45:34 2018
# Generated by iptables-save v1.6.0 on Tue Jun  5 13:45:34 2018
*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
# Completed on Tue Jun  5 13:45:34 2018
# Generated by iptables-save v1.6.0 on Tue Jun  5 13:45:34 2018
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:eth0_masq - [0:0]
:net_dnat - [0:0]
-A PREROUTING -i eth0 -j net_dnat
-A POSTROUTING -o eth0 -j eth0_masq
-A eth0_masq -j MASQUERADE
-A net_dnat -p tcp -m multiport --dports 111,2049,5000 -j DNAT --to-destination 192.168.0.2
-A net_dnat -p udp -m multiport --dports 111,2049,5000 -j DNAT --to-destination 192.168.0.2
COMMIT
# Completed on Tue Jun  5 13:45:34 2018
# Generated by iptables-save v1.6.0 on Tue Jun  5 13:45:34 2018
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:Broadcast - [0:0]
:Drop - [0:0]
:dynamic - [0:0]
:fw-net - [0:0]
:fw-xenbr - [0:0]
:logdrop - [0:0]
:logflags - [0:0]
:logreject - [0:0]
:net-fw - [0:0]
:net-xenbr - [0:0]
:net_frwd - [0:0]
:reject - [0:0]
:sha-lh-7157cc6235c2e260f6e7 - [0:0]
:sha-rh-ad28f5c34e9842fa6cde - [0:0]
:shorewall - [0:0]
:smurflog - [0:0]
:smurfs - [0:0]
:tcpflags - [0:0]
:xdef-fw - [0:0]
:xdef-net - [0:0]
:xdef-xeml - [0:0]
:xdef-xenbr - [0:0]
:xdef-xgod - [0:0]
:xdef-xnfs - [0:0]
:xdef-xpow - [0:0]
:xdef_frwd - [0:0]
:xeml-fw - [0:0]
:xeml-net - [0:0]
:xeml-xdef - [0:0]
:xeml-xenbr - [0:0]
:xeml-xgod - [0:0]
:xeml-xnfs - [0:0]
:xeml-xpow - [0:0]
:xeml_frwd - [0:0]
:xenbr-fw - [0:0]
:xenbr-net - [0:0]
:xenbr0_fwd - [0:0]
:xenbr0_in - [0:0]
:xenbr0_out - [0:0]
:xenbr_frwd - [0:0]
:xgod-fw - [0:0]
:xgod-net - [0:0]
:xgod-xdef - [0:0]
:xgod-xeml - [0:0]
:xgod-xenbr - [0:0]
:xgod-xnfs - [0:0]
:xgod-xpow - [0:0]
:xgod_frwd - [0:0]
:xnfs-fw - [0:0]
:xnfs-net - [0:0]
:xnfs-xdef - [0:0]
:xnfs-xeml - [0:0]
:xnfs-xenbr - [0:0]
:xnfs-xgod - [0:0]
:xnfs-xpow - [0:0]
:xnfs_frwd - [0:0]
:xpow-fw - [0:0]
:xpow-net - [0:0]
:xpow-xdef - [0:0]
:xpow-xeml - [0:0]
:xpow-xenbr - [0:0]
:xpow-xgod - [0:0]
:xpow-xnfs - [0:0]
:xpow_frwd - [0:0]
-A INPUT -i eth0 -j net-fw
-A INPUT -i xenbr0 -j xenbr0_in
-A INPUT -i lo -j ACCEPT
-A INPUT -j Drop
-A INPUT -j LOG --log-prefix "Shorewall:INPUT:DROP:" --log-level 6
-A INPUT -j DROP
-A FORWARD -i eth0 -j net_frwd
-A FORWARD -i xenbr0 -j xenbr0_fwd
-A FORWARD -j Drop
-A FORWARD -j LOG --log-prefix "Shorewall:FORWARD:DROP:" --log-level 6
-A FORWARD -j DROP
-A OUTPUT -o eth0 -j fw-net
-A OUTPUT -o xenbr0 -j xenbr0_out
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -j Drop
-A OUTPUT -j LOG --log-prefix "Shorewall:OUTPUT:DROP:" --log-level 6
-A OUTPUT -j DROP
-A Broadcast -m addrtype --dst-type BROADCAST -j DROP
-A Broadcast -m addrtype --dst-type MULTICAST -j DROP
-A Broadcast -m addrtype --dst-type ANYCAST -j DROP
-A Drop
-A Drop -j Broadcast
-A Drop -p icmp -m icmp --icmp-type 3/4 -m comment --comment "Needed ICMP types" -j ACCEPT
-A Drop -p icmp -m icmp --icmp-type 11 -m comment --comment "Needed ICMP types" -j ACCEPT
-A Drop -m conntrack --ctstate INVALID -j DROP
-A Drop -p udp -m multiport --dports 135,445 -m comment --comment SMB -j DROP
-A Drop -p udp -m udp --dport 137:139 -m comment --comment SMB -j DROP
-A Drop -p udp -m udp --sport 137 --dport 1024:65535 -m comment --comment SMB -j DROP
-A Drop -p tcp -m multiport --dports 135,139,445 -m comment --comment SMB -j DROP
-A Drop -p udp -m udp --dport 1900 -m comment --comment UPnP -j DROP
-A Drop -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -j DROP
-A Drop -p udp -m udp --sport 53 -m comment --comment "Late DNS Replies" -j DROP
-A fw-net -p udp -m udp --dport 67:68 -j ACCEPT
-A fw-net -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A fw-net -p icmp -m icmp --icmp-type 8 -m comment --comment Ping -j ACCEPT
-A fw-net -p udp -m udp --dport 53 -m comment --comment DNS -j ACCEPT
-A fw-net -p tcp -m tcp --dport 53 -m comment --comment DNS -j ACCEPT
-A fw-net -p tcp -m tcp --dport 9555 -j ACCEPT
-A fw-net -p tcp -m tcp --dport 17141 -j ACCEPT
-A fw-net -p tcp -m tcp --dport 17504 -j ACCEPT
-A fw-net -p tcp -m tcp --dport 11000:11100 -j ACCEPT
-A fw-net -p icmp -j ACCEPT
-A fw-net -j LOG --log-prefix "Shorewall:fw-net:ACCEPT:" --log-level 6
-A fw-net -j ACCEPT
-A fw-xenbr -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A fw-xenbr -p tcp -m tcp --dport 22 -m comment --comment SSH -j ACCEPT
-A fw-xenbr -p icmp -m icmp --icmp-type 8 -m comment --comment Ping -j ACCEPT
-A fw-xenbr -p icmp -m icmp --icmp-type 8 -m comment --comment Ping -j ACCEPT
-A fw-xenbr -p udp -m udp --dport 53 -m comment --comment DNS -j ACCEPT
-A fw-xenbr -p tcp -m tcp --dport 53 -m comment --comment DNS -j ACCEPT
-A fw-xenbr -p tcp -m tcp --dport 9555 -j ACCEPT
-A fw-xenbr -p tcp -m tcp --dport 17141 -j ACCEPT
-A fw-xenbr -p tcp -m tcp --dport 17504 -j ACCEPT
-A fw-xenbr -p tcp -m tcp --dport 11000:11100 -j ACCEPT
-A fw-xenbr -d 192.168.0.2/32 -p tcp -m multiport --dports 111,2049,5000 -j ACCEPT
-A fw-xenbr -d 192.168.0.2/32 -p udp -m multiport --dports 111,2049,5000 -j ACCEPT
-A fw-xenbr -d 192.168.0.3/32 -p tcp -m tcp --dport 6789 -j ACCEPT
-A fw-xenbr -j Drop
-A fw-xenbr -j LOG --log-prefix "Shorewall:fw-xenbr:DROP:" --log-level 6
-A fw-xenbr -j DROP
-A logdrop -j DROP
-A logflags -j LOG --log-prefix "Shorewall:logflags:DROP:" --log-level 6 --log-ip-options
-A logflags -j DROP
-A logreject -j reject
-A net-fw -m conntrack --ctstate INVALID,NEW,UNTRACKED -j dynamic
-A net-fw -m conntrack --ctstate INVALID,NEW,UNTRACKED -j smurfs
-A net-fw -p udp -m udp --dport 67:68 -j ACCEPT
-A net-fw -p tcp -j tcpflags
-A net-fw -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A net-fw -p tcp -m tcp --dport 22 -m comment --comment SSH -j ACCEPT
-A net-fw -p icmp -m icmp --icmp-type 8 -m comment --comment Ping -j ACCEPT
-A net-fw -p udp -m udp --dport 53 -m comment --comment DNS -j ACCEPT
-A net-fw -p tcp -m tcp --dport 53 -m comment --comment DNS -j ACCEPT
-A net-fw -p tcp -m tcp --dport 9555 -j ACCEPT
-A net-fw -p tcp -m tcp --dport 17141 -j ACCEPT
-A net-fw -p tcp -m tcp --dport 17504 -j ACCEPT
-A net-fw -p tcp -m tcp --dport 11000:11100 -j ACCEPT
-A net-fw -p tcp -m conntrack --ctstate INVALID -j DROP
-A net-fw -p icmp -m icmp --icmp-type 8 -m comment --comment Ping -j DROP
-A net-fw -j Drop
-A net-fw -j LOG --log-prefix "Shorewall:net-fw:DROP:" --log-level 6
-A net-fw -j DROP
-A net-xenbr -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A net-xenbr -p tcp -m tcp --dport 22 -m comment --comment SSH -j ACCEPT
-A net-xenbr -p icmp -m icmp --icmp-type 8 -m comment --comment Ping -j ACCEPT
-A net-xenbr -p udp -m udp --dport 53 -m comment --comment DNS -j ACCEPT
-A net-xenbr -p tcp -m tcp --dport 53 -m comment --comment DNS -j ACCEPT
-A net-xenbr -p tcp -m tcp --dport 9555 -j ACCEPT
-A net-xenbr -p tcp -m tcp --dport 17141 -j ACCEPT
-A net-xenbr -p tcp -m tcp --dport 17504 -j ACCEPT
-A net-xenbr -p tcp -m tcp --dport 11000:11100 -j ACCEPT
-A net-xenbr -d 192.168.0.2/32 -p tcp -m multiport --dports 111,2049,5000 -j ACCEPT
-A net-xenbr -d 192.168.0.2/32 -p udp -m multiport --dports 111,2049,5000 -j ACCEPT
-A net-xenbr -d 192.168.0.2/32 -p tcp -m multiport --dports 111,2049,5000 -j ACCEPT
-A net-xenbr -d 192.168.0.2/32 -p udp -m multiport --dports 111,2049,5000 -j ACCEPT
-A net-xenbr -j Drop
-A net-xenbr -j LOG --log-prefix "Shorewall:net-xenbr:DROP:" --log-level 6
-A net-xenbr -j DROP
-A net_frwd -m conntrack --ctstate INVALID,NEW,UNTRACKED -j dynamic
-A net_frwd -m conntrack --ctstate INVALID,NEW,UNTRACKED -j smurfs
-A net_frwd -p tcp -j tcpflags
-A net_frwd -o xenbr0 -j net-xenbr
-A reject -m addrtype --src-type BROADCAST -j DROP
-A reject -s 224.0.0.0/4 -j DROP
-A reject -p igmp -j DROP
-A reject -p tcp -j REJECT --reject-with tcp-reset
-A reject -p udp -j REJECT --reject-with icmp-port-unreachable
-A reject -p icmp -j REJECT --reject-with icmp-host-unreachable
-A reject -j REJECT --reject-with icmp-host-prohibited
-A shorewall -m recent --set --name %CURRENTTIME --mask 255.255.255.255 --rsource
-A smurflog -j LOG --log-prefix "Shorewall:smurfs:DROP:" --log-level 6
-A smurflog -j DROP
-A smurfs -s 0.0.0.0/32 -j RETURN
-A smurfs -m addrtype --src-type BROADCAST -g smurflog
-A smurfs -s 224.0.0.0/4 -g smurflog
-A tcpflags -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,PSH,URG -g logflags
-A tcpflags -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -g logflags
-A tcpflags -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -g logflags
-A tcpflags -p tcp -m tcp --tcp-flags FIN,RST FIN,RST -g logflags
-A tcpflags -p tcp -m tcp --tcp-flags FIN,SYN FIN,SYN -g logflags
-A tcpflags -p tcp -m tcp --tcp-flags FIN,PSH,ACK FIN,PSH -g logflags
-A tcpflags -p tcp -m tcp --sport 0 --tcp-flags FIN,SYN,RST,ACK SYN -g logflags
-A xdef-fw -m conntrack --ctstate INVALID,NEW,UNTRACKED -j dynamic
-A xdef-fw -p tcp -j tcpflags
-A xdef-fw -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A xdef-fw -p icmp -m icmp --icmp-type 8 -m comment --comment Ping -j ACCEPT
-A xdef-fw -p udp -m udp --dport 53 -m comment --comment DNS -j ACCEPT
-A xdef-fw -p tcp -m tcp --dport 53 -m comment --comment DNS -j ACCEPT
-A xdef-fw -p tcp -m tcp --dport 9555 -j ACCEPT
-A xdef-fw -p tcp -m tcp --dport 17141 -j ACCEPT
-A xdef-fw -p tcp -m tcp --dport 17504 -j ACCEPT
-A xdef-fw -p tcp -m tcp --dport 11000:11100 -j ACCEPT
-A xdef-fw -j Drop
-A xdef-fw -j LOG --log-prefix "Shorewall:xdef-fw:DROP:" --log-level 6
-A xdef-fw -j DROP
-A xdef-net -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A xdef-net -p icmp -m icmp --icmp-type 8 -m comment --comment Ping -j ACCEPT
-A xdef-net -p udp -m udp --dport 53 -m comment --comment DNS -j ACCEPT
-A xdef-net -p tcp -m tcp --dport 53 -m comment --comment DNS -j ACCEPT
-A xdef-net -p tcp -m tcp --dport 9555 -j ACCEPT
-A xdef-net -p tcp -m tcp --dport 17141 -j ACCEPT
-A xdef-net -p tcp -m tcp --dport 17504 -j ACCEPT
-A xdef-net -p tcp -m tcp --dport 11000:11100 -j ACCEPT
-A xdef-net -j Drop
-A xdef-net -j LOG --log-prefix "Shorewall:xdef-net:DROP:" --log-level 6
-A xdef-net -j DROP
-A xdef-xeml -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A xdef-xeml -p icmp -m icmp --icmp-type 8 -m comment --comment Ping -j ACCEPT
-A xdef-xeml -p udp -m udp --dport 53 -m comment --comment DNS -j ACCEPT
-A xdef-xeml -p tcp -m tcp --dport 53 -m comment --comment DNS -j ACCEPT
-A xdef-xeml -p tcp -m tcp --dport 9555 -j ACCEPT
-A xdef-xeml -p tcp -m tcp --dport 17141 -j ACCEPT
-A xdef-xeml -p tcp -m tcp --dport 17504 -j ACCEPT
-A xdef-xeml -p tcp -m tcp --dport 11000:11100 -j ACCEPT
-A xdef-xeml -j Drop
-A xdef-xeml -j LOG --log-prefix "Shorewall:xdef-xeml:DROP:" --log-level 6
-A xdef-xeml -j DROP
-A xdef-xenbr -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A xdef-xenbr -p icmp -m icmp --icmp-type 8 -m comment --comment Ping -j ACCEPT
-A xdef-xenbr -p udp -m udp --dport 53 -m comment --comment DNS -j ACCEPT
-A xdef-xenbr -p tcp -m tcp --dport 53 -m comment --comment DNS -j ACCEPT
-A xdef-xenbr -p tcp -m tcp --dport 9555 -j ACCEPT
-A xdef-xenbr -p tcp -m tcp --dport 17141 -j ACCEPT
-A xdef-xenbr -p tcp -m tcp --dport 17504 -j ACCEPT
-A xdef-xenbr -p tcp -m tcp --dport 11000:11100 -j ACCEPT
-A xdef-xenbr -d 192.168.0.2/32 -p tcp -m multiport --dports 111,2049,5000 -j ACCEPT
-A xdef-xenbr -d 192.168.0.2/32 -p udp -m multiport --dports 111,2049,5000 -j ACCEPT
-A xdef-xenbr -j Drop
-A xdef-xenbr -j LOG --log-prefix "Shorewall:xdef-xenbr:DROP:" --log-level 6
-A xdef-xenbr -j DROP
-A xdef-xgod -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A xdef-xgod -p icmp -m icmp --icmp-type 8 -m comment --comment Ping -j ACCEPT
-A xdef-xgod -p udp -m udp --dport 53 -m comment --comment DNS -j ACCEPT
-A xdef-xgod -p tcp -m tcp --dport 53 -m comment --comment DNS -j ACCEPT
-A xdef-xgod -p tcp -m tcp --dport 9555 -j ACCEPT
-A xdef-xgod -p tcp -m tcp --dport 17141 -j ACCEPT
-A xdef-xgod -p tcp -m tcp --dport 17504 -j ACCEPT
-A xdef-xgod -p tcp -m tcp --dport 11000:11100 -j ACCEPT
-A xdef-xgod -j Drop
-A xdef-xgod -j LOG --log-prefix "Shorewall:xdef-xgod:DROP:" --log-level 6
-A xdef-xgod -j DROP
-A xdef-xnfs -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A xdef-xnfs -p icmp -m icmp --icmp-type 8 -m comment --comment Ping -j ACCEPT
-A xdef-xnfs -p udp -m udp --dport 53 -m comment --comment DNS -j ACCEPT
-A xdef-xnfs -p tcp -m tcp --dport 53 -m comment --comment DNS -j ACCEPT
-A xdef-xnfs -p tcp -m multiport --dports 111,2049,5000 -j ACCEPT
-A xdef-xnfs -p udp -m multiport --dports 111,2049,5000 -j ACCEPT
-A xdef-xnfs -p tcp -m tcp --dport 9555 -j ACCEPT
-A xdef-xnfs -p tcp -m tcp --dport 17141 -j ACCEPT
-A xdef-xnfs -p tcp -m tcp --dport 17504 -j ACCEPT
-A xdef-xnfs -p tcp -m tcp --dport 11000:11100 -j ACCEPT
-A xdef-xnfs -j Drop
-A xdef-xnfs -j LOG --log-prefix "Shorewall:xdef-xnfs:DROP:" --log-level 6
-A xdef-xnfs -j DROP
-A xdef-xpow -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A xdef-xpow -p icmp -m icmp --icmp-type 8 -m comment --comment Ping -j ACCEPT
-A xdef-xpow -p udp -m udp --dport 53 -m comment --comment DNS -j ACCEPT
-A xdef-xpow -p tcp -m tcp --dport 53 -m comment --comment DNS -j ACCEPT
-A xdef-xpow -p tcp -m tcp --dport 9555 -j ACCEPT
-A xdef-xpow -p tcp -m tcp --dport 17141 -j ACCEPT
-A xdef-xpow -p tcp -m tcp --dport 17504 -j ACCEPT
-A xdef-xpow -p tcp -m tcp --dport 11000:11100 -j ACCEPT
-A xdef-xpow -j Drop
-A xdef-xpow -j LOG --log-prefix "Shorewall:xdef-xpow:DROP:" --log-level 6
-A xdef-xpow -j DROP
-A xdef_frwd -m conntrack --ctstate INVALID,NEW,UNTRACKED -j dynamic
-A xdef_frwd -p tcp -j tcpflags
-A xdef_frwd -o eth0 -j xdef-net
-A xdef_frwd -o xenbr0 -m physdev --physdev-out vif-nfs --physdev-is-bridged -j xdef-xnfs
-A xdef_frwd -o xenbr0 -m physdev --physdev-out vif-email+ --physdev-is-bridged -j xdef-xeml
-A xdef_frwd -o xenbr0 -m physdev --physdev-out vif-pow+ --physdev-is-bridged -j xdef-xpow
-A xdef_frwd -o xenbr0 -m physdev --physdev-out vif-god+ --physdev-is-bridged -j xdef-xgod
-A xdef_frwd -o xenbr0 -j xdef-xenbr
-A xeml-fw -m conntrack --ctstate INVALID,NEW,UNTRACKED -j dynamic
-A xeml-fw -p tcp -j tcpflags
-A xeml-fw -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A xeml-fw -p icmp -m icmp --icmp-type 8 -m comment --comment Ping -j ACCEPT
-A xeml-fw -p udp -m udp --dport 53 -m comment --comment DNS -j ACCEPT
-A xeml-fw -p tcp -m tcp --dport 53 -m comment --comment DNS -j ACCEPT
-A xeml-fw -p tcp -m tcp --dport 80 -m comment --comment HTTP -j ACCEPT
-A xeml-fw -p tcp -m tcp --dport 443 -m comment --comment HTTPS -j ACCEPT
-A xeml-fw -p tcp -m tcp --dport 9555 -j ACCEPT
-A xeml-fw -p tcp -m tcp --dport 17141 -j ACCEPT
-A xeml-fw -p tcp -m tcp --dport 17504 -j ACCEPT
-A xeml-fw -p tcp -m tcp --dport 11000:11100 -j ACCEPT
-A xeml-fw -j Drop
-A xeml-fw -j LOG --log-prefix "Shorewall:xeml-fw:DROP:" --log-level 6
-A xeml-fw -j DROP
-A xeml-net -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A xeml-net -p icmp -m icmp --icmp-type 8 -m comment --comment Ping -j ACCEPT
-A xeml-net -p udp -m udp --dport 53 -m comment --comment DNS -j ACCEPT
-A xeml-net -p tcp -m tcp --dport 53 -m comment --comment DNS -j ACCEPT
-A xeml-net -p tcp -m tcp --dport 80 -m comment --comment HTTP -j ACCEPT
-A xeml-net -p tcp -m tcp --dport 443 -m comment --comment HTTPS -j ACCEPT
-A xeml-net -p tcp -m multiport --dports 110,995 -j ACCEPT
-A xeml-net -p tcp -m multiport --dports 143,993,585 -j ACCEPT
-A xeml-net -p tcp -m multiport --dports 465,587,25,2525 -j ACCEPT
-A xeml-net -p tcp -m tcp --dport 9555 -j ACCEPT
-A xeml-net -p tcp -m tcp --dport 17141 -j ACCEPT
-A xeml-net -p tcp -m tcp --dport 17504 -j ACCEPT
-A xeml-net -p tcp -m tcp --dport 11000:11100 -j ACCEPT
-A xeml-net -j Drop
-A xeml-net -j LOG --log-prefix "Shorewall:xeml-net:DROP:" --log-level 6
-A xeml-net -j DROP
-A xeml-xdef -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A xeml-xdef -p icmp -m icmp --icmp-type 8 -m comment --comment Ping -j ACCEPT
-A xeml-xdef -p udp -m udp --dport 53 -m comment --comment DNS -j ACCEPT
-A xeml-xdef -p tcp -m tcp --dport 53 -m comment --comment DNS -j ACCEPT
-A xeml-xdef -p tcp -m tcp --dport 80 -m comment --comment HTTP -j ACCEPT
-A xeml-xdef -p tcp -m tcp --dport 443 -m comment --comment HTTPS -j ACCEPT
-A xeml-xdef -p tcp -m tcp --dport 9555 -j ACCEPT
-A xeml-xdef -p tcp -m tcp --dport 17141 -j ACCEPT
-A xeml-xdef -p tcp -m tcp --dport 17504 -j ACCEPT
-A xeml-xdef -p tcp -m tcp --dport 11000:11100 -j ACCEPT
-A xeml-xdef -j Drop
-A xeml-xdef -j LOG --log-prefix "Shorewall:xeml-xdef:DROP:" --log-level 6
-A xeml-xdef -j DROP
-A xeml-xenbr -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A xeml-xenbr -p icmp -m icmp --icmp-type 8 -m comment --comment Ping -j ACCEPT
-A xeml-xenbr -p udp -m udp --dport 53 -m comment --comment DNS -j ACCEPT
-A xeml-xenbr -p tcp -m tcp --dport 53 -m comment --comment DNS -j ACCEPT
-A xeml-xenbr -p tcp -m tcp --dport 80 -m comment --comment HTTP -j ACCEPT
-A xeml-xenbr -p tcp -m tcp --dport 443 -m comment --comment HTTPS -j ACCEPT
-A xeml-xenbr -p tcp -m tcp --dport 9555 -j ACCEPT
-A xeml-xenbr -p tcp -m tcp --dport 17141 -j ACCEPT
-A xeml-xenbr -p tcp -m tcp --dport 17504 -j ACCEPT
-A xeml-xenbr -p tcp -m tcp --dport 11000:11100 -j ACCEPT
-A xeml-xenbr -d 192.168.0.2/32 -p tcp -m multiport --dports 111,2049,5000 -j ACCEPT
-A xeml-xenbr -d 192.168.0.2/32 -p udp -m multiport --dports 111,2049,5000 -j ACCEPT
-A xeml-xenbr -j Drop
-A xeml-xenbr -j LOG --log-prefix "Shorewall:xeml-xenbr:DROP:" --log-level 6
-A xeml-xenbr -j DROP
-A xeml-xgod -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A xeml-xgod -p icmp -m icmp --icmp-type 8 -m comment --comment Ping -j ACCEPT
-A xeml-xgod -p udp -m udp --dport 53 -m comment --comment DNS -j ACCEPT
-A xeml-xgod -p tcp -m tcp --dport 53 -m comment --comment DNS -j ACCEPT
-A xeml-xgod -p tcp -m tcp --dport 80 -m comment --comment HTTP -j ACCEPT
-A xeml-xgod -p tcp -m tcp --dport 443 -m comment --comment HTTPS -j ACCEPT
-A xeml-xgod -p tcp -m tcp --dport 9555 -j ACCEPT
-A xeml-xgod -p tcp -m tcp --dport 17141 -j ACCEPT
-A xeml-xgod -p tcp -m tcp --dport 17504 -j ACCEPT
-A xeml-xgod -p tcp -m tcp --dport 11000:11100 -j ACCEPT
-A xeml-xgod -j Drop
-A xeml-xgod -j LOG --log-prefix "Shorewall:xeml-xgod:DROP:" --log-level 6
-A xeml-xgod -j DROP
-A xeml-xnfs -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A xeml-xnfs -p icmp -m icmp --icmp-type 8 -m comment --comment Ping -j ACCEPT
-A xeml-xnfs -p udp -m udp --dport 53 -m comment --comment DNS -j ACCEPT
-A xeml-xnfs -p tcp -m tcp --dport 53 -m comment --comment DNS -j ACCEPT
-A xeml-xnfs -p tcp -m multiport --dports 111,2049,5000 -j ACCEPT
-A xeml-xnfs -p udp -m multiport --dports 111,2049,5000 -j ACCEPT
-A xeml-xnfs -p tcp -m tcp --dport 80 -m comment --comment HTTP -j ACCEPT
-A xeml-xnfs -p tcp -m tcp --dport 443 -m comment --comment HTTPS -j ACCEPT
-A xeml-xnfs -p tcp -m tcp --dport 9555 -j ACCEPT
-A xeml-xnfs -p tcp -m tcp --dport 17141 -j ACCEPT
-A xeml-xnfs -p tcp -m tcp --dport 17504 -j ACCEPT
-A xeml-xnfs -p tcp -m tcp --dport 11000:11100 -j ACCEPT
-A xeml-xnfs -j Drop
-A xeml-xnfs -j LOG --log-prefix "Shorewall:xeml-xnfs:DROP:" --log-level 6
-A xeml-xnfs -j DROP
-A xeml-xpow -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A xeml-xpow -p icmp -m icmp --icmp-type 8 -m comment --comment Ping -j ACCEPT
-A xeml-xpow -p udp -m udp --dport 53 -m comment --comment DNS -j ACCEPT
-A xeml-xpow -p tcp -m tcp --dport 53 -m comment --comment DNS -j ACCEPT
-A xeml-xpow -p tcp -m tcp --dport 80 -m comment --comment HTTP -j ACCEPT
-A xeml-xpow -p tcp -m tcp --dport 443 -m comment --comment HTTPS -j ACCEPT
-A xeml-xpow -p tcp -m tcp --dport 9555 -j ACCEPT
-A xeml-xpow -p tcp -m tcp --dport 17141 -j ACCEPT
-A xeml-xpow -p tcp -m tcp --dport 17504 -j ACCEPT
-A xeml-xpow -p tcp -m tcp --dport 11000:11100 -j ACCEPT
-A xeml-xpow -j Drop
-A xeml-xpow -j LOG --log-prefix "Shorewall:xeml-xpow:DROP:" --log-level 6
-A xeml-xpow -j DROP
-A xeml_frwd -m conntrack --ctstate INVALID,NEW,UNTRACKED -j dynamic
-A xeml_frwd -p tcp -j tcpflags
-A xeml_frwd -o eth0 -j xeml-net
-A xeml_frwd -o xenbr0 -m physdev --physdev-out vif-nfs --physdev-is-bridged -j xeml-xnfs
-A xeml_frwd -o xenbr0 -m physdev --physdev-out vif-def+ --physdev-is-bridged -j xeml-xdef
-A xeml_frwd -o xenbr0 -m physdev --physdev-out vif-pow+ --physdev-is-bridged -j xeml-xpow
-A xeml_frwd -o xenbr0 -m physdev --physdev-out vif-god+ --physdev-is-bridged -j xeml-xgod
-A xeml_frwd -o xenbr0 -j xeml-xenbr
-A xenbr-fw -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A xenbr-fw -p icmp -m icmp --icmp-type 8 -m comment --comment Ping -j ACCEPT
-A xenbr-fw -p udp -m udp --dport 53 -m comment --comment DNS -j ACCEPT
-A xenbr-fw -p tcp -m tcp --dport 53 -m comment --comment DNS -j ACCEPT
-A xenbr-fw -p tcp -m tcp --dport 9555 -j ACCEPT
-A xenbr-fw -p tcp -m tcp --dport 17141 -j ACCEPT
-A xenbr-fw -p tcp -m tcp --dport 17504 -j ACCEPT
-A xenbr-fw -p tcp -m tcp --dport 11000:11100 -j ACCEPT
-A xenbr-fw -j Drop
-A xenbr-fw -j LOG --log-prefix "Shorewall:xenbr-fw:DROP:" --log-level 6
-A xenbr-fw -j DROP
-A xenbr-net -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A xenbr-net -p icmp -m icmp --icmp-type 8 -m comment --comment Ping -j ACCEPT
-A xenbr-net -p udp -m udp --dport 53 -m comment --comment DNS -j ACCEPT
-A xenbr-net -p tcp -m tcp --dport 53 -m comment --comment DNS -j ACCEPT
-A xenbr-net -p tcp -m tcp --dport 9555 -j ACCEPT
-A xenbr-net -p tcp -m tcp --dport 17141 -j ACCEPT
-A xenbr-net -p tcp -m tcp --dport 17504 -j ACCEPT
-A xenbr-net -p tcp -m tcp --dport 11000:11100 -j ACCEPT
-A xenbr-net -j Drop
-A xenbr-net -j LOG --log-prefix "Shorewall:xenbr-net:DROP:" --log-level 6
-A xenbr-net -j DROP
-A xenbr0_fwd -m conntrack --ctstate INVALID,NEW,UNTRACKED -j dynamic
-A xenbr0_fwd -o xenbr0 -p udp -m udp --dport 67:68 -j ACCEPT
-A xenbr0_fwd -p tcp -j tcpflags
-A xenbr0_fwd -m physdev --physdev-in vif-nfs -j xnfs_frwd
-A xenbr0_fwd -m physdev --physdev-in vif-def+ -j xdef_frwd
-A xenbr0_fwd -m physdev --physdev-in vif-email+ -j xeml_frwd
-A xenbr0_fwd -m physdev --physdev-in vif-pow+ -j xpow_frwd
-A xenbr0_fwd -m physdev --physdev-in vif-god+ -j xgod_frwd
-A xenbr0_fwd -j xenbr_frwd
-A xenbr0_in -m conntrack --ctstate INVALID,NEW,UNTRACKED -j dynamic
-A xenbr0_in -p udp -m udp --dport 67:68 -j ACCEPT
-A xenbr0_in -p tcp -j tcpflags
-A xenbr0_in -m physdev --physdev-in vif-nfs -j xnfs-fw
-A xenbr0_in -m physdev --physdev-in vif-def+ -j xdef-fw
-A xenbr0_in -m physdev --physdev-in vif-email+ -j xeml-fw
-A xenbr0_in -m physdev --physdev-in vif-pow+ -j xpow-fw
-A xenbr0_in -m physdev --physdev-in vif-god+ -j xgod-fw
-A xenbr0_in -j xenbr-fw
-A xenbr0_out -p udp -m udp --dport 67:68 -j ACCEPT
-A xenbr0_out -j fw-xenbr
-A xenbr_frwd -o eth0 -j xenbr-net
-A xenbr_frwd -o xenbr0 -j ACCEPT
-A xgod-fw -m conntrack --ctstate INVALID,NEW,UNTRACKED -j dynamic
-A xgod-fw -p tcp -j tcpflags
-A xgod-fw -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A xgod-fw -p icmp -m icmp --icmp-type 8 -m comment --comment Ping -j ACCEPT
-A xgod-fw -p udp -m udp --dport 53 -m comment --comment DNS -j ACCEPT
-A xgod-fw -p tcp -m tcp --dport 53 -m comment --comment DNS -j ACCEPT
-A xgod-fw -p tcp -m tcp --dport 9555 -j ACCEPT
-A xgod-fw -p tcp -m tcp --dport 17141 -j ACCEPT
-A xgod-fw -p tcp -m tcp --dport 17504 -j ACCEPT
-A xgod-fw -p tcp -m tcp --dport 11000:11100 -j ACCEPT
-A xgod-fw -j ACCEPT
-A xgod-net -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A xgod-net -p icmp -m icmp --icmp-type 8 -m comment --comment Ping -j ACCEPT
-A xgod-net -p udp -m udp --dport 53 -m comment --comment DNS -j ACCEPT
-A xgod-net -p tcp -m tcp --dport 53 -m comment --comment DNS -j ACCEPT
-A xgod-net -p tcp -m tcp --dport 9555 -j ACCEPT
-A xgod-net -p tcp -m tcp --dport 17141 -j ACCEPT
-A xgod-net -p tcp -m tcp --dport 17504 -j ACCEPT
-A xgod-net -p tcp -m tcp --dport 11000:11100 -j ACCEPT
-A xgod-net -j ACCEPT
-A xgod-xdef -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A xgod-xdef -p icmp -m icmp --icmp-type 8 -m comment --comment Ping -j ACCEPT
-A xgod-xdef -p udp -m udp --dport 53 -m comment --comment DNS -j ACCEPT
-A xgod-xdef -p tcp -m tcp --dport 53 -m comment --comment DNS -j ACCEPT
-A xgod-xdef -p tcp -m tcp --dport 9555 -j ACCEPT
-A xgod-xdef -p tcp -m tcp --dport 17141 -j ACCEPT
-A xgod-xdef -p tcp -m tcp --dport 17504 -j ACCEPT
-A xgod-xdef -p tcp -m tcp --dport 11000:11100 -j ACCEPT
-A xgod-xdef -j ACCEPT
-A xgod-xeml -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A xgod-xeml -p icmp -m icmp --icmp-type 8 -m comment --comment Ping -j ACCEPT
-A xgod-xeml -p udp -m udp --dport 53 -m comment --comment DNS -j ACCEPT
-A xgod-xeml -p tcp -m tcp --dport 53 -m comment --comment DNS -j ACCEPT
-A xgod-xeml -p tcp -m tcp --dport 9555 -j ACCEPT
-A xgod-xeml -p tcp -m tcp --dport 17141 -j ACCEPT
-A xgod-xeml -p tcp -m tcp --dport 17504 -j ACCEPT
-A xgod-xeml -p tcp -m tcp --dport 11000:11100 -j ACCEPT
-A xgod-xeml -j ACCEPT
-A xgod-xenbr -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A xgod-xenbr -p icmp -m icmp --icmp-type 8 -m comment --comment Ping -j ACCEPT
-A xgod-xenbr -p udp -m udp --dport 53 -m comment --comment DNS -j ACCEPT
-A xgod-xenbr -p tcp -m tcp --dport 53 -m comment --comment DNS -j ACCEPT
-A xgod-xenbr -p tcp -m tcp --dport 9555 -j ACCEPT
-A xgod-xenbr -p tcp -m tcp --dport 17141 -j ACCEPT
-A xgod-xenbr -p tcp -m tcp --dport 17504 -j ACCEPT
-A xgod-xenbr -p tcp -m tcp --dport 11000:11100 -j ACCEPT
-A xgod-xenbr -d 192.168.0.2/32 -p tcp -m multiport --dports 111,2049,5000 -j ACCEPT
-A xgod-xenbr -d 192.168.0.2/32 -p udp -m multiport --dports 111,2049,5000 -j ACCEPT
-A xgod-xenbr -j ACCEPT
-A xgod-xnfs -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A xgod-xnfs -p icmp -m icmp --icmp-type 8 -m comment --comment Ping -j ACCEPT
-A xgod-xnfs -p udp -m udp --dport 53 -m comment --comment DNS -j ACCEPT
-A xgod-xnfs -p tcp -m tcp --dport 53 -m comment --comment DNS -j ACCEPT
-A xgod-xnfs -p tcp -m tcp --dport 9555 -j ACCEPT
-A xgod-xnfs -p tcp -m tcp --dport 17141 -j ACCEPT
-A xgod-xnfs -p tcp -m tcp --dport 17504 -j ACCEPT
-A xgod-xnfs -p tcp -m tcp --dport 11000:11100 -j ACCEPT
-A xgod-xnfs -j ACCEPT
-A xgod-xpow -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A xgod-xpow -p icmp -m icmp --icmp-type 8 -m comment --comment Ping -j ACCEPT
-A xgod-xpow -p udp -m udp --dport 53 -m comment --comment DNS -j ACCEPT
-A xgod-xpow -p tcp -m tcp --dport 53 -m comment --comment DNS -j ACCEPT
-A xgod-xpow -p tcp -m tcp --dport 9555 -j ACCEPT
-A xgod-xpow -p tcp -m tcp --dport 17141 -j ACCEPT
-A xgod-xpow -p tcp -m tcp --dport 17504 -j ACCEPT
-A xgod-xpow -p tcp -m tcp --dport 11000:11100 -j ACCEPT
-A xgod-xpow -j ACCEPT
-A xgod_frwd -m conntrack --ctstate INVALID,NEW,UNTRACKED -j dynamic
-A xgod_frwd -p tcp -j tcpflags
-A xgod_frwd -o eth0 -j xgod-net
-A xgod_frwd -o xenbr0 -m physdev --physdev-out vif-nfs --physdev-is-bridged -j xgod-xnfs
-A xgod_frwd -o xenbr0 -m physdev --physdev-out vif-def+ --physdev-is-bridged -j xgod-xdef
-A xgod_frwd -o xenbr0 -m physdev --physdev-out vif-email+ --physdev-is-bridged -j xgod-xeml
-A xgod_frwd -o xenbr0 -m physdev --physdev-out vif-pow+ --physdev-is-bridged -j xgod-xpow
-A xgod_frwd -o xenbr0 -j xgod-xenbr
-A xnfs-fw -m conntrack --ctstate INVALID,NEW,UNTRACKED -j dynamic
-A xnfs-fw -p tcp -j tcpflags
-A xnfs-fw -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A xnfs-fw -p icmp -m icmp --icmp-type 8 -m comment --comment Ping -j ACCEPT
-A xnfs-fw -p udp -m udp --dport 53 -m comment --comment DNS -j ACCEPT
-A xnfs-fw -p tcp -m tcp --dport 53 -m comment --comment DNS -j ACCEPT
-A xnfs-fw -p tcp -m tcp --dport 9555 -j ACCEPT
-A xnfs-fw -p tcp -m tcp --dport 17141 -j ACCEPT
-A xnfs-fw -p tcp -m tcp --dport 17504 -j ACCEPT
-A xnfs-fw -p tcp -m tcp --dport 11000:11100 -j ACCEPT
-A xnfs-fw -j Drop
-A xnfs-fw -j LOG --log-prefix "Shorewall:xnfs-fw:DROP:" --log-level 6
-A xnfs-fw -j DROP
-A xnfs-net -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A xnfs-net -p icmp -m icmp --icmp-type 8 -m comment --comment Ping -j ACCEPT
-A xnfs-net -p udp -m udp --dport 53 -m comment --comment DNS -j ACCEPT
-A xnfs-net -p tcp -m tcp --dport 53 -m comment --comment DNS -j ACCEPT
-A xnfs-net -p tcp -m tcp --dport 9555 -j ACCEPT
-A xnfs-net -p tcp -m tcp --dport 17141 -j ACCEPT
-A xnfs-net -p tcp -m tcp --dport 17504 -j ACCEPT
-A xnfs-net -p tcp -m tcp --dport 11000:11100 -j ACCEPT
-A xnfs-net -j Drop
-A xnfs-net -j LOG --log-prefix "Shorewall:xnfs-net:DROP:" --log-level 6
-A xnfs-net -j DROP
-A xnfs-xdef -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A xnfs-xdef -p icmp -m icmp --icmp-type 8 -m comment --comment Ping -j ACCEPT
-A xnfs-xdef -p udp -m udp --dport 53 -m comment --comment DNS -j ACCEPT
-A xnfs-xdef -p tcp -m tcp --dport 53 -m comment --comment DNS -j ACCEPT
-A xnfs-xdef -p tcp -m tcp --dport 9555 -j ACCEPT
-A xnfs-xdef -p tcp -m tcp --dport 17141 -j ACCEPT
-A xnfs-xdef -p tcp -m tcp --dport 17504 -j ACCEPT
-A xnfs-xdef -p tcp -m tcp --dport 11000:11100 -j ACCEPT
-A xnfs-xdef -j Drop
-A xnfs-xdef -j LOG --log-prefix "Shorewall:xnfs-xdef:DROP:" --log-level 6
-A xnfs-xdef -j DROP
-A xnfs-xeml -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A xnfs-xeml -p icmp -m icmp --icmp-type 8 -m comment --comment Ping -j ACCEPT
-A xnfs-xeml -p udp -m udp --dport 53 -m comment --comment DNS -j ACCEPT
-A xnfs-xeml -p tcp -m tcp --dport 53 -m comment --comment DNS -j ACCEPT
-A xnfs-xeml -p tcp -m tcp --dport 9555 -j ACCEPT
-A xnfs-xeml -p tcp -m tcp --dport 17141 -j ACCEPT
-A xnfs-xeml -p tcp -m tcp --dport 17504 -j ACCEPT
-A xnfs-xeml -p tcp -m tcp --dport 11000:11100 -j ACCEPT
-A xnfs-xeml -j Drop
-A xnfs-xeml -j LOG --log-prefix "Shorewall:xnfs-xeml:DROP:" --log-level 6
-A xnfs-xeml -j DROP
-A xnfs-xenbr -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A xnfs-xenbr -p icmp -m icmp --icmp-type 8 -m comment --comment Ping -j ACCEPT
-A xnfs-xenbr -p udp -m udp --dport 53 -m comment --comment DNS -j ACCEPT
-A xnfs-xenbr -p tcp -m tcp --dport 53 -m comment --comment DNS -j ACCEPT
-A xnfs-xenbr -p tcp -m tcp --dport 9555 -j ACCEPT
-A xnfs-xenbr -p tcp -m tcp --dport 17141 -j ACCEPT
-A xnfs-xenbr -p tcp -m tcp --dport 17504 -j ACCEPT
-A xnfs-xenbr -p tcp -m tcp --dport 11000:11100 -j ACCEPT
-A xnfs-xenbr -d 192.168.0.2/32 -p tcp -m multiport --dports 111,2049,5000 -j ACCEPT
-A xnfs-xenbr -d 192.168.0.2/32 -p udp -m multiport --dports 111,2049,5000 -j ACCEPT
-A xnfs-xenbr -j Drop
-A xnfs-xenbr -j LOG --log-prefix "Shorewall:xnfs-xenbr:DROP:" --log-level 6
-A xnfs-xenbr -j DROP
-A xnfs-xgod -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A xnfs-xgod -p icmp -m icmp --icmp-type 8 -m comment --comment Ping -j ACCEPT
-A xnfs-xgod -p udp -m udp --dport 53 -m comment --comment DNS -j ACCEPT
-A xnfs-xgod -p tcp -m tcp --dport 53 -m comment --comment DNS -j ACCEPT
-A xnfs-xgod -p tcp -m tcp --dport 9555 -j ACCEPT
-A xnfs-xgod -p tcp -m tcp --dport 17141 -j ACCEPT
-A xnfs-xgod -p tcp -m tcp --dport 17504 -j ACCEPT
-A xnfs-xgod -p tcp -m tcp --dport 11000:11100 -j ACCEPT
-A xnfs-xgod -j Drop
-A xnfs-xgod -j LOG --log-prefix "Shorewall:xnfs-xgod:DROP:" --log-level 6
-A xnfs-xgod -j DROP
-A xnfs-xpow -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A xnfs-xpow -p icmp -m icmp --icmp-type 8 -m comment --comment Ping -j ACCEPT
-A xnfs-xpow -p udp -m udp --dport 53 -m comment --comment DNS -j ACCEPT
-A xnfs-xpow -p tcp -m tcp --dport 53 -m comment --comment DNS -j ACCEPT
-A xnfs-xpow -p tcp -m tcp --dport 9555 -j ACCEPT
-A xnfs-xpow -p tcp -m tcp --dport 17141 -j ACCEPT
-A xnfs-xpow -p tcp -m tcp --dport 17504 -j ACCEPT
-A xnfs-xpow -p tcp -m tcp --dport 11000:11100 -j ACCEPT
-A xnfs-xpow -j Drop
-A xnfs-xpow -j LOG --log-prefix "Shorewall:xnfs-xpow:DROP:" --log-level 6
-A xnfs-xpow -j DROP
-A xnfs_frwd -m conntrack --ctstate INVALID,NEW,UNTRACKED -j dynamic
-A xnfs_frwd -p tcp -j tcpflags
-A xnfs_frwd -o eth0 -j xnfs-net
-A xnfs_frwd -o xenbr0 -m physdev --physdev-out vif-def+ --physdev-is-bridged -j xnfs-xdef
-A xnfs_frwd -o xenbr0 -m physdev --physdev-out vif-email+ --physdev-is-bridged -j xnfs-xeml
-A xnfs_frwd -o xenbr0 -m physdev --physdev-out vif-pow+ --physdev-is-bridged -j xnfs-xpow
-A xnfs_frwd -o xenbr0 -m physdev --physdev-out vif-god+ --physdev-is-bridged -j xnfs-xgod
-A xnfs_frwd -o xenbr0 -j xnfs-xenbr
-A xpow-fw -m conntrack --ctstate INVALID,NEW,UNTRACKED -j dynamic
-A xpow-fw -p tcp -j tcpflags
-A xpow-fw -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A xpow-fw -p icmp -m icmp --icmp-type 8 -m comment --comment Ping -j ACCEPT
-A xpow-fw -p udp -m udp --dport 53 -m comment --comment DNS -j ACCEPT
-A xpow-fw -p tcp -m tcp --dport 53 -m comment --comment DNS -j ACCEPT
-A xpow-fw -p tcp -m tcp --dport 80 -m comment --comment HTTP -j ACCEPT
-A xpow-fw -p tcp -m tcp --dport 443 -m comment --comment HTTPS -j ACCEPT
-A xpow-fw -p tcp -m tcp --dport 21 -m comment --comment FTP -j ACCEPT
-A xpow-fw -p tcp -m tcp --dport 22 -m comment --comment SSH -j ACCEPT
-A xpow-fw -p tcp -m tcp --dport 9555 -j ACCEPT
-A xpow-fw -p tcp -m tcp --dport 17141 -j ACCEPT
-A xpow-fw -p tcp -m tcp --dport 17504 -j ACCEPT
-A xpow-fw -p tcp -m tcp --dport 11000:11100 -j ACCEPT
-A xpow-fw -j Drop
-A xpow-fw -j LOG --log-prefix "Shorewall:xpow-fw:DROP:" --log-level 6
-A xpow-fw -j DROP
-A xpow-net -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A xpow-net -p icmp -m icmp --icmp-type 8 -m comment --comment Ping -j ACCEPT
-A xpow-net -p udp -m udp --dport 53 -m comment --comment DNS -j ACCEPT
-A xpow-net -p tcp -m tcp --dport 53 -m comment --comment DNS -j ACCEPT
-A xpow-net -p tcp -m tcp --dport 80 -m comment --comment HTTP -j ACCEPT
-A xpow-net -p tcp -m tcp --dport 443 -m comment --comment HTTPS -j ACCEPT
-A xpow-net -p tcp -m multiport --dports 110,995 -j ACCEPT
-A xpow-net -p tcp -m multiport --dports 143,993,585 -j ACCEPT
-A xpow-net -p tcp -m multiport --dports 465,587,25,2525 -j ACCEPT
-A xpow-net -p tcp -m tcp --dport 21 -m comment --comment FTP -j ACCEPT
-A xpow-net -p tcp -m tcp --dport 1024:65535 -j ACCEPT
-A xpow-net -p tcp -m tcp --dport 22 -m comment --comment SSH -j ACCEPT
-A xpow-net -p tcp -m tcp --dport 9555 -j ACCEPT
-A xpow-net -p tcp -m tcp --dport 17141 -j ACCEPT
-A xpow-net -p tcp -m tcp --dport 17504 -j ACCEPT
-A xpow-net -p tcp -m tcp --dport 11000:11100 -j ACCEPT
-A xpow-net -j Drop
-A xpow-net -j LOG --log-prefix "Shorewall:xpow-net:DROP:" --log-level 6
-A xpow-net -j DROP
-A xpow-xdef -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A xpow-xdef -p icmp -m icmp --icmp-type 8 -m comment --comment Ping -j ACCEPT
-A xpow-xdef -p udp -m udp --dport 53 -m comment --comment DNS -j ACCEPT
-A xpow-xdef -p tcp -m tcp --dport 53 -m comment --comment DNS -j ACCEPT
-A xpow-xdef -p tcp -m tcp --dport 80 -m comment --comment HTTP -j ACCEPT
-A xpow-xdef -p tcp -m tcp --dport 443 -m comment --comment HTTPS -j ACCEPT
-A xpow-xdef -p tcp -m tcp --dport 21 -m comment --comment FTP -j ACCEPT
-A xpow-xdef -p tcp -m tcp --dport 22 -m comment --comment SSH -j ACCEPT
-A xpow-xdef -p tcp -m tcp --dport 9555 -j ACCEPT
-A xpow-xdef -p tcp -m tcp --dport 17141 -j ACCEPT
-A xpow-xdef -p tcp -m tcp --dport 17504 -j ACCEPT
-A xpow-xdef -p tcp -m tcp --dport 11000:11100 -j ACCEPT
-A xpow-xdef -j Drop
-A xpow-xdef -j LOG --log-prefix "Shorewall:xpow-xdef:DROP:" --log-level 6
-A xpow-xdef -j DROP
-A xpow-xeml -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A xpow-xeml -p icmp -m icmp --icmp-type 8 -m comment --comment Ping -j ACCEPT
-A xpow-xeml -p udp -m udp --dport 53 -m comment --comment DNS -j ACCEPT
-A xpow-xeml -p tcp -m tcp --dport 53 -m comment --comment DNS -j ACCEPT
-A xpow-xeml -p tcp -m tcp --dport 80 -m comment --comment HTTP -j ACCEPT
-A xpow-xeml -p tcp -m tcp --dport 443 -m comment --comment HTTPS -j ACCEPT
-A xpow-xeml -p tcp -m tcp --dport 21 -m comment --comment FTP -j ACCEPT
-A xpow-xeml -p tcp -m tcp --dport 22 -m comment --comment SSH -j ACCEPT
-A xpow-xeml -p tcp -m tcp --dport 9555 -j ACCEPT
-A xpow-xeml -p tcp -m tcp --dport 17141 -j ACCEPT
-A xpow-xeml -p tcp -m tcp --dport 17504 -j ACCEPT
-A xpow-xeml -p tcp -m tcp --dport 11000:11100 -j ACCEPT
-A xpow-xeml -j Drop
-A xpow-xeml -j LOG --log-prefix "Shorewall:xpow-xeml:DROP:" --log-level 6
-A xpow-xeml -j DROP
-A xpow-xenbr -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A xpow-xenbr -p icmp -m icmp --icmp-type 8 -m comment --comment Ping -j ACCEPT
-A xpow-xenbr -p udp -m udp --dport 53 -m comment --comment DNS -j ACCEPT
-A xpow-xenbr -p tcp -m tcp --dport 53 -m comment --comment DNS -j ACCEPT
-A xpow-xenbr -p tcp -m tcp --dport 80 -m comment --comment HTTP -j ACCEPT
-A xpow-xenbr -p tcp -m tcp --dport 443 -m comment --comment HTTPS -j ACCEPT
-A xpow-xenbr -p tcp -m tcp --dport 21 -m comment --comment FTP -j ACCEPT
-A xpow-xenbr -p tcp -m tcp --dport 22 -m comment --comment SSH -j ACCEPT
-A xpow-xenbr -p tcp -m tcp --dport 9555 -j ACCEPT
-A xpow-xenbr -p tcp -m tcp --dport 17141 -j ACCEPT
-A xpow-xenbr -p tcp -m tcp --dport 17504 -j ACCEPT
-A xpow-xenbr -p tcp -m tcp --dport 11000:11100 -j ACCEPT
-A xpow-xenbr -d 192.168.0.2/32 -p tcp -m multiport --dports 111,2049,5000 -j ACCEPT
-A xpow-xenbr -d 192.168.0.2/32 -p udp -m multiport --dports 111,2049,5000 -j ACCEPT
-A xpow-xenbr -j Drop
-A xpow-xenbr -j LOG --log-prefix "Shorewall:xpow-xenbr:DROP:" --log-level 6
-A xpow-xenbr -j DROP
-A xpow-xgod -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A xpow-xgod -p icmp -m icmp --icmp-type 8 -m comment --comment Ping -j ACCEPT
-A xpow-xgod -p udp -m udp --dport 53 -m comment --comment DNS -j ACCEPT
-A xpow-xgod -p tcp -m tcp --dport 53 -m comment --comment DNS -j ACCEPT
-A xpow-xgod -p tcp -m tcp --dport 80 -m comment --comment HTTP -j ACCEPT
-A xpow-xgod -p tcp -m tcp --dport 443 -m comment --comment HTTPS -j ACCEPT
-A xpow-xgod -p tcp -m tcp --dport 21 -m comment --comment FTP -j ACCEPT
-A xpow-xgod -p tcp -m tcp --dport 22 -m comment --comment SSH -j ACCEPT
-A xpow-xgod -p tcp -m tcp --dport 9555 -j ACCEPT
-A xpow-xgod -p tcp -m tcp --dport 17141 -j ACCEPT
-A xpow-xgod -p tcp -m tcp --dport 17504 -j ACCEPT
-A xpow-xgod -p tcp -m tcp --dport 11000:11100 -j ACCEPT
-A xpow-xgod -j Drop
-A xpow-xgod -j LOG --log-prefix "Shorewall:xpow-xgod:DROP:" --log-level 6
-A xpow-xgod -j DROP
-A xpow-xnfs -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A xpow-xnfs -p icmp -m icmp --icmp-type 8 -m comment --comment Ping -j ACCEPT
-A xpow-xnfs -p udp -m udp --dport 53 -m comment --comment DNS -j ACCEPT
-A xpow-xnfs -p tcp -m tcp --dport 53 -m comment --comment DNS -j ACCEPT
-A xpow-xnfs -p tcp -m multiport --dports 111,2049,5000 -j ACCEPT
-A xpow-xnfs -p udp -m multiport --dports 111,2049,5000 -j ACCEPT
-A xpow-xnfs -p tcp -m tcp --dport 80 -m comment --comment HTTP -j ACCEPT
-A xpow-xnfs -p tcp -m tcp --dport 443 -m comment --comment HTTPS -j ACCEPT
-A xpow-xnfs -p tcp -m tcp --dport 21 -m comment --comment FTP -j ACCEPT
-A xpow-xnfs -p tcp -m tcp --dport 22 -m comment --comment SSH -j ACCEPT
-A xpow-xnfs -p tcp -m tcp --dport 9555 -j ACCEPT
-A xpow-xnfs -p tcp -m tcp --dport 17141 -j ACCEPT
-A xpow-xnfs -p tcp -m tcp --dport 17504 -j ACCEPT
-A xpow-xnfs -p tcp -m tcp --dport 11000:11100 -j ACCEPT
-A xpow-xnfs -j Drop
-A xpow-xnfs -j LOG --log-prefix "Shorewall:xpow-xnfs:DROP:" --log-level 6
-A xpow-xnfs -j DROP
-A xpow_frwd -m conntrack --ctstate INVALID,NEW,UNTRACKED -j dynamic
-A xpow_frwd -p tcp -j tcpflags
-A xpow_frwd -o eth0 -j xpow-net
-A xpow_frwd -o xenbr0 -m physdev --physdev-out vif-nfs --physdev-is-bridged -j xpow-xnfs
-A xpow_frwd -o xenbr0 -m physdev --physdev-out vif-def+ --physdev-is-bridged -j xpow-xdef
-A xpow_frwd -o xenbr0 -m physdev --physdev-out vif-email+ --physdev-is-bridged -j xpow-xeml
-A xpow_frwd -o xenbr0 -m physdev --physdev-out vif-god+ --physdev-is-bridged -j xpow-xgod
-A xpow_frwd -o xenbr0 -j xpow-xenbr
COMMIT
# Completed on Tue Jun  5 13:45:34 2018
